syntax = "proto3";

package videometadata;

service VideoMetadataGRPC {
    rpc AddVideoMetadata(AddVideoMetadataRequest) returns (VideoMetadata);
    rpc GetAllVideoMetadata(Empty) returns (GetAllVideoMetadataResponse);
    rpc UpdateVideoMetadata(UpdateVideoMetadataRequest) returns (VideoMetadata);
    rpc GetVideoMetadatasOfUser(GetVideoMetadatasOfUserRequest) returns (GetVideoMetadatasOfUserResponse);
    rpc GetVideoMetadataById(GetVideoMetadataByIdRequest) returns (VideoMetadata);
    rpc SearchVideosByTitle(SearchVideosByTitleRequest) returns (SearchVideosByTitleResponse);
}
  
message Empty {}

message VideoMetadata {
    string id = 1;
    string title = 2;
    string description = 3;
    string formatName = 4;
    float duration = 5;
    int64 size = 6;
    string status = 7;
    string thumbnailUrl = 8;
    bool isPublic = 9;
    string userId = 10;
}

message AddVideoMetadataRequest {
    string title = 2;
    string description = 3;
    string formatName = 4;
    float duration = 5;
    int64 size = 6;
    string userId = 7;
}


message GetAllVideoMetadataResponse {
    repeated VideoMetadata videoMetadatas = 1;
}

message UpdateVideoMetadataRequest {
    string id = 1;
    string status = 2;
    string thumbnailUrl = 3;
}

message GetVideoMetadatasOfUserRequest {
    string userId = 1;
}

message GetVideoMetadatasOfUserResponse {
    repeated VideoMetadata videoMetadatas = 1;
}

message GetVideoMetadataByIdRequest {
    string id = 1;
}

message SearchVideosByTitleRequest { 
    string title = 1;
}

message SearchVideosByTitleResponse {
    repeated VideoMetadata videoMetadatas = 1;
}